--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,15 @@ springfox.documentation.swagger.v2.path=/api-docs
 
 # ****** H2 In Memort Database Connection Info  *******
 spring.datasource.url=jdbc:h2:mem:demo;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:file:~/demo.db;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.platform=h2
 spring.datasource.initialization-mode=always
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error=false
 
 spring.jpa.show-sql=false
