--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.17.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
