--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,16 @@
 			<artifactId>javafaker</artifactId>
 			<version>0.17.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>3.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
