--- a/webui/package.json
+++ b/webui/package.json
@@ -11,64 +11,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
+    "@angular/animations": "^7.2.13",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.13",
+    "@angular/compiler": "^7.2.13",
+    "@angular/core": "^7.2.13",
     "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
-    "@clr/angular": "^0.12.8",
-    "@clr/icons": "^0.12.8",
-    "@clr/ui": "^0.12.8",
-    "@swimlane/ngx-charts": "^9.0.0",
-    "@swimlane/ngx-datatable": "^13.1.0",
-    "@webcomponents/custom-elements": "^1.2.0",
-    "angular2-notifications": "^1.0.2",
-    "bootstrap": "^4.0.0-alpha.5",
+    "@angular/forms": "^7.2.13",
+    "@angular/http": "^7.2.13",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.13",
+    "@angular/platform-browser-dynamic": "^7.2.13",
+    "@angular/router": "^7.2.13",
+    "@clr/angular": "^1.1.2",
+    "@clr/icons": "^1.1.2",
+    "@clr/ui": "^1.1.2",
+    "@swimlane/ngx-charts": "^10.1.0",
+    "@swimlane/ngx-datatable": "^14.0.0",
+    "@webcomponents/custom-elements": "^1.2.4",
+    "angular2-notifications": "^2.0.0",
+    "bootstrap": "^4.3.1",
     "classlist.js": "^1.1.20150312",
-    "codemirror": "^5.42.0",
-    "core-js": "^2.5.4",
-    "d3": "^4.12.0",
+    "codemirror": "^5.45.0",
+    "core-js": "^3.0.1",
+    "d3": "^5.9.2",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
-    "moment": "^2.22.2",
-    "ng-http-loader": "^3.1.2",
-    "ngx-moment": "^3.2.0",
+    "jquery": "^3.4.0",
+    "moment": "^2.24.0",
+    "ng-http-loader": "^5.1.0",
+    "ngx-moment": "^3.4.0",
     "normalize.css": "^8.0.1",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
+    "npm-check-updates": "^3.1.8",
+    "popper.js": "^1.15.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "ts-helpers": "^1.1.2",
     "tslib": "^1.9.3",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "^6.2.8",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.0.3",
+    "@angular-devkit/build-angular": "~0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.13",
+    "@angular/language-service": "^7.2.13",
     "@types/hammerjs": "^2.0.36",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.3.12",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~11.13.6",
+    "codelyzer": "~5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "^2.7.2"
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
+    "typescript": "^3.1.6"
   }
 }
