--- a/webui/package.json
+++ b/webui/package.json
@@ -11,65 +11,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.13",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.13",
-    "@angular/compiler": "^7.2.13",
-    "@angular/core": "^7.2.13",
-    "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^7.2.13",
-    "@angular/http": "^7.2.13",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.13",
-    "@angular/platform-browser-dynamic": "^7.2.13",
-    "@angular/router": "^7.2.13",
-    "@clr/angular": "^1.1.2",
-    "@clr/icons": "^1.1.2",
-    "@clr/ui": "^1.1.2",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@clr/angular": "^1.1.3",
+    "@clr/icons": "^1.1.3",
+    "@clr/ui": "^1.1.3",
     "@swimlane/ngx-charts": "^10.1.0",
     "@swimlane/ngx-datatable": "^14.0.0",
     "@webcomponents/custom-elements": "^1.2.4",
     "angular2-notifications": "^2.0.0",
     "bootstrap": "^4.3.1",
     "classlist.js": "^1.1.20150312",
-    "codemirror": "^5.45.0",
-    "core-js": "^3.0.1",
+    "codemirror": "^5.47.0",
+    "core-js": "^3.1.3",
     "d3": "^5.9.2",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ng-http-loader": "^5.1.0",
     "ngx-moment": "^3.4.0",
     "normalize.css": "^8.0.1",
-    "npm-check-updates": "^3.1.8",
+    "npm-check-updates": "^3.1.9",
     "popper.js": "^1.15.0",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.4.0",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "ts-helpers": "^1.1.2",
     "tslib": "^1.9.3",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.9.0"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.8",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.13",
-    "@angular/language-service": "^7.2.13",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@types/hammerjs": "^2.0.36",
-    "@types/jasmine": "~3.3.12",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~11.13.6",
-    "codelyzer": "~5.0.0",
+    "@types/node": "^11.13.12",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "ts-node": "~8.1.0",
+    "ts-node": "^8.1.1",
     "tslint": "~5.16.0",
-    "typescript": "^3.1.6"
+    "typescript": "3.1.6"
   }
 }
