--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-support</artifactId>
+			<version>2.0.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
