--- a/webui/package.json
+++ b/webui/package.json
@@ -35,6 +35,7 @@
     "codemirror": "^5.47.0",
     "core-js": "^3.1.3",
     "d3": "^5.9.2",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
