--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -1,2 +1,2 @@
-spring.cloud.gcp.sql.instance-connection-name=utm-jc:europe-west6:utm-jc
-spring.cloud.gcp.sql.database-name=utm-jc
+spring.cloud.gcp.sql.instance-connection-name=java-concurrency:europe-west6:java-concurrency
+spring.cloud.gcp.sql.database-name=java-concurrency
